--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,38 +1,25 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
-
+name: Release
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  create:
+    tags:
+      - v*
 
 jobs:
-
-  build:
+  release:
+    name: Release on GitHub
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v1
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.21'
+      - name: Validates GO releaser config
+        uses: docker://goreleaser/goreleaser:latest
+        with:
+          args: check
 
-    - name: 编译 golang
-      run: cd ./core && go build -o /opt/build
-   
-    - name: 创建 Release
-      id: create_release
-      uses: actions/create-release@latest
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v${{steps.version.outputs.value}}
-        release_name: v${{steps.version.outputs.value}}
-        draft: false
-        prerelease: false
-
-
+      - name: Create release on GitHub
+        uses: docker://goreleaser/goreleaser:latest
+        with:
+          args: release
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
