--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions: write-all
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
