--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go Release
+name: linux_build
 
 on:
   push:
@@ -10,10 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      repository-projects: write
+    permissions: write-all
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -22,12 +19,8 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '^1.21'
-
     - name: Build
       run: cd ./core && go build -o ../docker-pull .
-
-    
-
     - name: Prepare Release
       id: prepare_release
       run: |
