--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -9,12 +9,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions: write-all
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
     - name: Setup Go
       uses: actions/setup-go@v2
       with:
@@ -26,22 +25,12 @@ jobs:
       run: |
         VERSION=$(cat VERSION)
         echo ::set-output name=version::$VERSION
-
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v${{ steps.prepare_release.outputs.version }}
-        release_name: Release ${{ steps.prepare_release.outputs.version }}
-
     - name: Upload Artifact
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./docker-pull
-        asset_name: docker-pull
+        asset_path: ./docker-pull.exe
+        asset_name: docker-pull.exe
         asset_content_type: application/octet-stream
