--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: windows_build
+name: linux_build
 
 on:
   push:
@@ -14,6 +14,7 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+
     - name: Setup Go
       uses: actions/setup-go@v2
       with:
@@ -25,12 +26,22 @@ jobs:
       run: |
         VERSION=$(cat VERSION)
         echo ::set-output name=version::$VERSION
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: v${{ steps.prepare_release.outputs.version }}
+        release_name: Release ${{ steps.prepare_release.outputs.version }}
+
     - name: Upload Artifact
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./docker-pull.exe
-        asset_name: docker-pull.exe
+        asset_path: ./docker-pull
+        asset_name: docker-pull
         asset_content_type: application/octet-stream
