--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -31,6 +31,9 @@ jobs:
         with:
           tag_name: v${{ steps.prepare_release.outputs.version }}
           release_name: Release ${{ steps.prepare_release.outputs.version }}
+      - name: Set Upload Url
+        id: set_upload_url
+        run: UPLOAD_URL=${{ steps.create_release.outputs.upload_url }}
     
   build_linux:
     runs-on: ubuntu-latest
@@ -54,7 +57,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ jobs.release.steps.create_release.outputs.upload_url }}
+        upload_url: $UPLOAD_URL
         asset_path: ./docker-pull
         asset_name: docker-pull
         asset_content_type: application/octet-stream
@@ -83,7 +86,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ jobs.release.steps.create_release.outputs.upload_url }}
+        upload_url:  $UPLOAD_URL
         asset_path: .\docker-pull.exe
         asset_name: docker-pull.exe
         asset_content_type: application/octet-stream
