--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -11,6 +11,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     permissions: write-all
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -57,7 +59,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: $UPLOAD_URL
+        upload_url: ${{ needs.release.outputs.upload_url }}
         asset_path: ./docker-pull
         asset_name: docker-pull
         asset_content_type: application/octet-stream
@@ -86,7 +88,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url:  $UPLOAD_URL
+        upload_url:  ${{ needs.release.outputs.upload_url }}
         asset_path: .\docker-pull.exe
         asset_name: docker-pull.exe
         asset_content_type: application/octet-stream
