--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -32,13 +32,6 @@ jobs:
         with:
           tag_name: v${{ steps.prepare_release.outputs.version }}
           release_name: Release ${{ steps.prepare_release.outputs.version }}
-      - name: Save release ID
-        run: echo "${{ steps.create_release.outputs.id }}" > release_id.txt
-      - name: Upload release ID
-        uses: actions/upload-artifact@v2
-        with:
-          name: release_id
-          path: release_id.txt
     
   build_linux:
     runs-on: ubuntu-latest
@@ -57,21 +50,13 @@ jobs:
       run: |
         VERSION=$(cat VERSION)
         echo ::set-output name=version::$VERSION
-    
-    - name: Download release ID
-      uses: actions/download-artifact@v2
-      with:
-        name: release_id
-    - name: Read release ID
-      id: release_id
-      run: echo "::set-output name=id::$(cat release_id/release_id.txt)"
-      
+          
     - name: Upload Artifact
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: https://api.github.com/repos/${{ github.repository }}/releases/${{ steps.release_id.outputs.id }}
+        upload_url: ${{ needs.release.create_release.outputs.upload_url }}
         asset_path: ./docker-pull
         asset_name: docker-pull
         asset_content_type: application/octet-stream
@@ -100,7 +85,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ needs.release.outputs.vars.upload_url }}
+        upload_url: ${{ needs.release.create_release.outputs.upload_url }}
         asset_path: .\docker-pull.exe
         asset_name: docker-pull.exe
         asset_content_type: application/octet-stream
