--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -50,6 +50,23 @@ jobs:
       run: |
         VERSION=$(cat VERSION)
         echo ::set-output name=version::$VERSION
+
+    - name: Get latest release info
+      id: get_release_info
+      run: |
+        LATEST_RELEASE=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/latest)
+        echo "::set-output name=upload_url::$(echo $LATEST_RELEASE | jq -r '.upload_url')"
+        echo "::set-output name=tag_name::$(echo $LATEST_RELEASE | jq -r '.tag_name')"
+
+    - name: Display release upload URL and tag name
+      run: |
+        echo "Release Upload URL: ${{ steps.get_release_info.outputs.upload_url }}"
+        echo "Tag Name: ${{ steps.get_release_info.outputs.tag_name }}"
+
+    - name: Display release upload path
+      run: |
+        echo "Upload Path: $(echo ${{ steps.get_release_info.outputs.upload_url }} | sed 's/{?name,label}//')"
+
           
     - name: Upload Artifact
       uses: actions/upload-release-asset@v1
