--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -73,7 +73,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ needs.release.create_release.outputs.upload_url }}
+        upload_url: ${{ steps.get_release_info.outputs.upload_url }}"
         asset_path: ./docker-pull
         asset_name: docker-pull
         asset_content_type: application/octet-stream
