--- a/Dockerfile-arm64
+++ b/Dockerfile-arm64
@@ -1,10 +1,10 @@
-FROM --platform linux/arm64 golang:1.22-alpine as builder
+FROM --platform=linux/arm64 golang:1.22-alpine as builder
 COPY ./core /core
 WORKDIR /core
 RUN mkdir /opt/build
 RUN go build -o /opt/build
 
-FROM --platform linux/arm64 alpine:3.20 as runtime
+FROM --platform=linux/arm64 alpine:3.20 as runtime
 COPY --from=builder /opt/build/docker-pull /usr/bin/docker-pull
 WORKDIR /work
 ENTRYPOINT ["/usr/bin/docker-pull"]
