--- a/Dockerfile-armv7
+++ b/Dockerfile-armv7
@@ -1,11 +1,10 @@
 FROM --platform=linux/arm/v7 golang:1.22-alpine as builder
 COPY ./core /core
 WORKDIR /core
-RUN mkdir /opt/build
-RUN go build -o /opt/build
+RUN go build -o /opt
 
 FROM --platform=linux/arm/v7 alpine:3.20 as runtime
-COPY --from=builder /opt/build/docker-pull /usr/bin/docker-pull
+COPY --from=builder /opt/docker-pull /usr/bin/docker-pull
 WORKDIR /work
 ENTRYPOINT ["/usr/bin/docker-pull"]
 
