--- a/Dockerfile-armv7
+++ b/Dockerfile-armv7
@@ -1,9 +1,11 @@
 FROM --platform=linux/arm/v7 golang:1.22-alpine as builder
+COPY qemu-arm-static /usr/bin/
 COPY ./core /core
 WORKDIR /core
 RUN go build -o /opt
 
 FROM --platform=linux/arm/v7 alpine:3.20 as runtime
+COPY qemu-arm-static /usr/bin/
 COPY --from=builder /opt/docker-pull /usr/bin/docker-pull
 WORKDIR /work
 ENTRYPOINT ["/usr/bin/docker-pull"]
