--- a/Dockerfile-arm64
+++ b/Dockerfile-arm64
@@ -1,11 +1,11 @@
 FROM --platform=linux/arm64 golang:1.22-alpine as builder
-COPY qemu-arm-static /usr/bin/
+COPY qemu-aarch64-static /usr/bin/
 COPY ./core /core
 WORKDIR /core
 RUN go build -o /opt
 
 FROM --platform=linux/arm64 alpine:3.20 as runtime
-COPY qemu-arm-static /usr/bin/
+COPY qemu-aarch64-static /usr/bin/
 COPY --from=builder /opt/docker-pull /usr/bin/docker-pull
 WORKDIR /work
 ENTRYPOINT ["/usr/bin/docker-pull"]
