--- a/cmd/Dockerfile-arm64
+++ b/cmd/Dockerfile-arm64
@@ -1,6 +1,6 @@
 FROM --platform=linux/arm64 golang:1.22-alpine as builder
 COPY qemu-aarch64-static /usr/bin/
-COPY ./core /core
+COPY ./ /core
 WORKDIR /core
 RUN go build -o /opt
 
