--- a/cmd/Dockerfile-armv7
+++ b/cmd/Dockerfile-armv7
@@ -1,6 +1,6 @@
 FROM --platform=linux/arm/v7 golang:1.22-alpine as builder
 COPY qemu-arm-static /usr/bin/
-COPY ./core /core
+COPY ./ /core
 WORKDIR /core
 RUN go build -o /opt
 
