--- a/cmd/docker-compose.yml
+++ b/cmd/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   docker_pull_build:
     image: golang:1.22-alpine
     volumes:
-      - "./build:/opt/build"
-      - "./core:/opt/core"
-      - "./_cache/mod:/go/pkg/mod"
+      - "../build:/opt/build"
+      - "../:/opt/core"
+      - "../_cache/mod:/go/pkg/mod"
     working_dir: /opt/core
     command: go build -o /opt/build
