--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Docker Build
       run: |
-        curl -LSs "curl https://github.com/multiarch/qemu-user-static/releases/download/v7.2.0-1/qemu-arm-static.tar.gz" | tar xzv
+        curl -LSs "https://github.com/multiarch/qemu-user-static/releases/download/v7.2.0-1/qemu-arm-static.tar.gz" | tar xzv
         docker build --platform=linux/arm/v7 -f Dockerfile-armv7 -t device_bridge_arm_build .
         docker run -d --name device_bridge_arm_build device_bridge_arm_build bash
         docker cp device_bridge_arm_build:/opt/build/docker-pull ./docker-pull
