--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,8 @@ jobs:
     - name: Docker Build
       run: |
         curl -LSs "https://github.com/multiarch/qemu-user-static/releases/download/v7.2.0-1/qemu-arm-static.tar.gz" | tar xzv
-        docker build --platform=linux/arm/v7 -f Dockerfile-armv7 -t device_bridge_arm_build .
+        docker buildx create --use
+        docker buildx build --platform --platform=linux/arm/v7 -f Dockerfile-armv7 -t device_bridge_arm_build .
         docker run -d --name device_bridge_arm_build device_bridge_arm_build bash
         docker cp device_bridge_arm_build:/opt/build/docker-pull ./docker-pull
         docker rm -f device_bridge_arm_build
