--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         curl -LSs "https://github.com/multiarch/qemu-user-static/releases/download/v7.2.0-1/qemu-arm-static.tar.gz" | tar xzv
         docker buildx create --use
-        docker buildx build --platform=linux/arm/v7 -f Dockerfile-armv7 -t device_bridge_arm_build .
+        docker buildx build --platform=linux/arm/v7 -f Dockerfile -t device_bridge_arm_build .
         docker run -d --name device_bridge_arm_build device_bridge_arm_build bash
         docker cp device_bridge_arm_build:/opt/build/docker-pull ./docker-pull
         docker rm -f device_bridge_arm_build
@@ -42,5 +42,5 @@ jobs:
       with:
         upload_url: ${{ steps.get_release_info.outputs.upload_url }}"
         asset_path: ./docker-pull
-        asset_name: docker-pull
+        asset_name: docker-pull-arm
         asset_content_type: application/octet-stream
